upload all files

--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -199,8 +199,8 @@
   <header class="hero">
     <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/nickelplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
-      <h1 data-i18n-key="hero_title">Nickel Plating — การชุบนิกเกิล</h1>
-      <p data-i18n-key="hero_tagline">ภาพรวม หลักการ คุณสมบัติ จุดเด่น สูตร Watt’s ขั้นตอน และสภาพการทำงาน</p>
+      <h1 data-i18n-key="hero_title">Nickel Plating — การชุบนิกเกิลเงา</h1>
+      <p data-i18n-key="hero_tagline">ภาพรวม หลักการ คุณสมบัติ จุดเด่น ขั้นตอน และสภาพการทำงาน</p>
     </div>
   </header>
 
@@ -210,7 +210,7 @@
       <section id="intro" class="reveal section-block" aria-labelledby="intro-h">
         <h2 id="intro-h" class="section" data-i18n-key="intro_h">ภาพรวมผลิตภัณฑ์</h2>
         <div class="content">
-          <p data-i18n-key="intro_p1">การชุบนิกเกิล (Nickel plating) คือกระบวนการทางเคมีไฟฟ้าที่เคลือบผิวโลหะด้วยชั้นนิกเกิลที่บางและแข็งแรงเพื่อเพิ่มคุณสมบัติ เช่น ความทนทานต่อการกัดกร่อน การทนทานต่อการสึกหรอ และความสวยงามของชิ้นงาน กระบวนการนี้ทำงานโดยใช้กระแสไฟฟ้าผ่านสารละลายที่มีไอออนนิกเกิล ทำให้ไอออนเหล่านั้นตกตะกอนเคลือบติดที่ชิ้นงานอย่างสม่ำเสมอ นอกจากจะทำให้ชิ้นงานดูเงางามแล้ว การชุบนิกเกิลยังช่วยปกป้องพื้นผิวจากความเสียหายทั้งทางเคมีและทางกล ส่งผลให้ชิ้นงานมีอายุการใช้งานที่ยาวนานขึ้น</p>
+          <p data-i18n-key="intro_p1">การชุบนิกเกิลเงา (Nickel plating) คือกระบวนการทางเคมีไฟฟ้าที่เคลือบผิวโลหะด้วยชั้นนิกเกิลที่บางและแข็งแรงเพื่อเพิ่มคุณสมบัติ เช่น ความทนทานต่อการกัดกร่อน การทนทานต่อการสึกหรอ และความสวยงามของชิ้นงาน กระบวนการนี้ทำงานโดยใช้กระแสไฟฟ้าผ่านสารละลายที่มีไอออนนิกเกิล ทำให้ไอออนเหล่านั้นตกตะกอนเคลือบติดที่ชิ้นงานอย่างสม่ำเสมอ นอกจากจะทำให้ชิ้นงานดูเงางามแล้ว การชุบนิกเกิลยังช่วยปกป้องพื้นผิวจากความเสียหายทั้งทางเคมีและทางกล ส่งผลให้ชิ้นงานมีอายุการใช้งานที่ยาวนานขึ้น</p>
           <p data-i18n-key="intro_p2">การชุบนิกเกิลมี 2 ประเภทหลัก คือ การชุบด้วยไฟฟ้า (Electroplating) และ การชุบแบบไม่ใช้ไฟฟ้า (Electroless Nickel Plating). การชุบด้วยไฟฟ้าใช้กระแสไฟเพื่อเคลือบผิวชิ้นงาน ส่วนการชุบแบบไม่ใช้ไฟฟ้าใช้สารเคมีแทน ซึ่งให้ความหนาที่สม่ำเสมอทั่วทั้งชิ้นงานแม้ในรูหรือซอกลึก.</p>
         </div>
       </section>
@@ -276,10 +276,10 @@
         <h2 id="benefits-h" class="section" data-i18n-key="benefits_h">คุณสมบัติและประโยชน์ของการชุบนิกเกิล</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="benefit_1" data-i18n-html="true"><strong>ป้องกันการกัดกร่อน:</strong> ทนชื้น/สารเคมี/ละอองเกลือ ช่วยยืดอายุการใช้งาน</li>
-            <li data-i18n-key="benefit_2" data-i18n-html="true"><strong>เพิ่มความแข็ง & ทนสึก:</strong> ลดรอยขีดข่วน เหมาะชิ้นส่วนเครื่องกล</li>
-            <li data-i18n-key="benefit_3" data-i18n-html="true"><strong>ความสวยงาม:</strong> ผิวมันวาว เรียบเนียน เหมาะของตกแต่ง/ยานยนต์/จิวเวลรี่</li>
-            <li data-i18n-key="benefit_4" data-i18n-html="true"><strong>ชั้นรองพื้น:</strong> ใช้เป็น undercoat ก่อนชุบโครเมียมเพื่อการยึดเกาะและทนกัดกร่อน</li>
+            <li data-i18n-key="benefit_1" data-i18n-html="true"><strong>ป้องกันการกัดกร่อน:</strong> ทนชื้น/สารเคมี/ละอองเกลือ ช่วยยืดอายุการใช้งาน</li><br>
+            <li data-i18n-key="benefit_2" data-i18n-html="true"><strong>เพิ่มความแข็ง & ทนสึก:</strong> ลดรอยขีดข่วน เหมาะชิ้นส่วนเครื่องกล</li><br>
+            <li data-i18n-key="benefit_3" data-i18n-html="true"><strong>ความสวยงาม:</strong> ผิวมันวาว เรียบเนียน เหมาะของตกแต่ง/ยานยนต์/จิวเวลรี่</li><br>
+            <li data-i18n-key="benefit_4" data-i18n-html="true"><strong>ชั้นรองพื้น:</strong> ใช้เป็น undercoat ก่อนชุบโครเมียมเพื่อการยึดเกาะและทนกัดกร่อน</li><br>
           </ul>
         </div>
       </section>
@@ -427,12 +427,41 @@
   <script>
     const I18N = {
       th: {
+
+      hero_tagline: "ภาพรวม หลักการ คุณสมบัติ จุดเด่น ขั้นตอน และสภาพการทำงาน",
+
+      intro_h: "ภาพรวมผลิตภัณฑ์",
+      intro_p1: "การชุบนิกเกิล (Nickel plating) คือกระบวนการทางเคมีไฟฟ้าที่เคลือบผิวโลหะด้วยชั้นนิกเกิลที่บางและแข็งแรงเพื่อเพิ่มคุณสมบัติ เช่น ความทนทานต่อการกัดกร่อน การทนทานต่อการสึกหรอ และความสวยงามของชิ้นงาน กระบวนการนี้ทำงานโดยใช้กระแสไฟฟ้าผ่านสารละลายที่มีไอออนนิกเกิล ทำให้ไอออนเหล่านั้นตกตะกอนเคลือบติดที่ชิ้นงานอย่างสม่ำเสมอ นอกจากจะทำให้ชิ้นงานดูเงางามแล้ว การชุบนิกเกิลยังช่วยปกป้องพื้นผิวจากความเสียหายทั้งทางเคมีและทางกล ส่งผลให้ชิ้นงานมีอายุการใช้งานที่ยาวนานขึ้น",
+      intro_p2: "การชุบนิกเกิลมี 2 ประเภทหลัก คือ การชุบด้วยไฟฟ้า (Electroplating) และ การชุบแบบไม่ใช้ไฟฟ้า (Electroless Nickel Plating). การชุบด้วยไฟฟ้าใช้กระแสไฟเพื่อเคลือบผิวชิ้นงาน ส่วนการชุบแบบไม่ใช้ไฟฟ้าใช้สารเคมีแทน ซึ่งให้ความหนาที่สม่ำเสมอทั่วทั้งชิ้นงานแม้ในรูหรือซอกลึก.",
+      // TOC
+      toc_title: "สารบัญ",
+      toc_features: "จุดเด่น",
+      toc_benefits: "คุณสมบัติ & ประโยชน์",
+      toc_makeup: "ส่วนที่ 1: การเตรียมสารละลาย",
+      toc_process: "ส่วนที่ 2: ขั้นตอนการชุบ",
+      toc_conditions: "สภาพการทำงาน & อุปกรณ์",
+      // Features
+      features_h: "จุดเด่นของน้ำยา",
+      features_lead: "สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
+      feat_1_t: "เงาสูงทั่วช่วงกระแส",
+      feat_1_d: "ตั้งแต่ <strong>LCD ถึง HCD</strong> ให้ผิวเงาเนียน สม่ำเสมอ",
+      feat_2_t: "ครอบคลุมซอกลึก",
+      feat_2_d: "การกระจายตัวดีเยี่ยม บริเวณรู/ร่องลึกเคลือบได้ทั่วถึง",
+      feat_3_t: "ฐานทนกัดกร่อน",
+      feat_3_d: "ชั้นนิกเกิลช่วยปกป้องสนิมและความชื้น",
+      feat_4_t: "หน้าต่างปฏิบัติการกว้าง",
+      feat_4_d: "ทำงานได้ยืดหยุ่นทั้งอุณหภูมิ ความเข้มข้น และกระแส",
+      feat_5_t: "เก็บผิวและเกลี่ยผิว",
+      feat_5_d: "ช่วยกลบรอยทราย ลดความหยาบ ให้ผิวเรียบเนียน",
+      feat_6_t: "พร้อมรองรับโครเมียม",
+      feat_6_d: "ผิวพร้อมรับชุบโครเมียมต่อสำหรับงานตกแต่ง",
+
         /* Benefits */
         benefits_h:"คุณสมบัติและประโยชน์ของการชุบนิกเกิล",
-        benefit_1:"<strong>ป้องกันการกัดกร่อน:</strong> ทนชื้น/สารเคมี/ละอองเกลือ ช่วยยืดอายุการใช้งาน",
-        benefit_2:"<strong>เพิ่มความแข็ง & ทนสึก:</strong> ลดรอยขีดข่วน เหมาะชิ้นส่วนเครื่องกล",
-        benefit_3:"<strong>ความสวยงาม:</strong> ผิวมันวาว เรียบเนียน เหมาะของตกแต่ง/ยานยนต์/จิวเวลรี่",
-        benefit_4:"<strong>ชั้นรองพื้น:</strong> ใช้เป็น undercoat ก่อนชุบโครเมียมเพื่อการยึดเกาะและทนกัดกร่อน",
+      benefit_1: "<strong>ป้องกันการกัดกร่อน:</strong> การชุบนิกเกิลเป็นหนึ่งในวิธีที่มีประสิทธิภาพที่สุดในการสร้างเกราะป้องกันให้กับผิวชิ้นงานโลหะ โดยเฉพาะอย่างยิ่งในสภาพแวดล้อมที่มีความชื้นสูงหรือสัมผัสกับสารเคมีอย่างต่อเนื่อง ชั้นนิกเกิลที่ถูกเคลือบจะทำหน้าที่เป็นเกราะที่แข็งแกร่งและไม่ทำปฏิกิริยากับสภาพแวดล้อมภายนอกได้ง่าย ซึ่งช่วยให้ชิ้นงาน ทนทานต่อการเกิดสนิมและการกัดกร่อน ได้อย่างยาวนานและมีประสิทธิภาพสูง  ด้วยคุณสมบัตินี้เอง การชุบนิกเกิลจึงเป็นที่นิยมอย่างแพร่หลายในอุตสาหกรรมที่ชิ้นส่วนต้องเผชิญกับสภาพอากาศที่รุนแรงหรือสารกัดกร่อน เช่น อุตสาหกรรมทางทะเล, อุตสาหกรรมเคมี, และชิ้นส่วนยานยนต์",
+      benefit_2: "<strong>เพิ่มความแข็ง & ทนสึก:</strong> ชั้นนิกเกิลที่ถูกชุบลงบนผิวชิ้นงานจะช่วยเพิ่มความแข็งและความทนทานต่อการสึกหรอได้อย่างดีเยี่ยม ทำให้ชิ้นงานที่ผ่านกระบวนการนี้สามารถ ลดรอยขีดข่วน และความเสียหายที่อาจเกิดขึ้นจากการใช้งานในชีวิตประจำวันได้อย่างมีประสิทธิภาพ คุณสมบัตินี้เป็นสิ่งสำคัญอย่างยิ่งสำหรับ ชิ้นส่วนเครื่องกล ที่ต้องรองรับแรงเสียดสีหรือการเสียดทานอย่างต่อเนื่อง เช่น เกียร์, ตลับลูกปืน, หรือเครื่องมือต่างๆ การชุบนิกเกิลจึงช่วยยืดอายุการใช้งานของอุปกรณ์เหล่านี้และลดความจำเป็นในการซ่อมบำรุง",
+      benefit_3: "<strong>ความสวยงาม:</strong> การชุบนิกเกิลให้ผิวสัมผัสที่ มันวาวและเรียบเนียน มีความสวยงามและหรูหราซึ่งช่วยเพิ่มมูลค่าให้กับผลิตภัณฑ์ได้อย่างน่าประทับใจ การเคลือบผิวนิกเกิลทำให้ชิ้นงานมีรูปลักษณ์ที่โดดเด่นและน่าสนใจมากยิ่งขึ้น ทำให้ถูกนำไปใช้ในงานที่ต้องการความสวยงามและคุณภาพสูง เช่น ชิ้นส่วนภายนอกของรถยนต์, เครื่องประดับ, เครื่องใช้ในบ้าน, และอุปกรณ์ตกแต่งต่างๆ นอกจากนี้ ผิวนิกเกิลยังทำความสะอาดง่ายและรักษาความเงางามได้ดี ทำให้ผลิตภัณฑ์คงความสวยงามได้ยาวนาน",
+      benefit_4: "<strong>ชั้นรองพื้น:</strong> นอกจากจะใช้เป็นชั้นผิวเคลือบสุดท้ายแล้ว การชุบนิกเกิลยังถูกใช้เป็น ชั้นรองพื้น ที่สำคัญก่อนการชุบเคลือบผิวอื่นๆ โดยเฉพาะอย่างยิ่งการชุบ โครเมียม ซึ่งเป็นที่นิยมอย่างแพร่หลาย การชุบนิกเกิลก่อนชุบโครเมียมจะช่วยให้ชั้นโครเมียมสามารถยึดเกาะกับผิวโลหะได้ดีขึ้นอย่างมาก นอกจากนี้ ชั้นนิกเกิลยังทำหน้าที่เป็นเกราะป้องกันชั้นแรกที่ช่วยเสริมคุณสมบัติในการ ทนทานต่อการกัดกร่อน ให้กับชิ้นงานโดยรวมได้ดียิ่งขึ้น เพื่อให้ได้ผลิตภัณฑ์ที่มีทั้งความแข็งแรง ทนทาน และสวยงามอย่างสมบูรณ์แบบ",
 
         /* Make-up table */
         makeup_h:"ส่วนที่ 1: การเตรียมสารละลาย",
@@ -492,12 +521,41 @@
         footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
       en: {
+
+      hero_tagline: "Overview Principles Properties Highlights / Strengths Steps / Procedures Working Conditions",
+
+      intro_h: "Product overview",
+      intro_p1: "Nickel plating is an electrochemical process that deposits a thin, robust layer of nickel on a metal surface to enhance properties such as corrosion resistance, wear resistance, and overall appearance. The process applies an electric current through a solution containing nickel ions, causing those ions to reduce and deposit uniformly on the workpiece. Beyond delivering a bright finish, nickel plating protects the surface from both chemical and mechanical damage, extending the part’s service life.",
+      intro_p2: "There are two principal types of nickel plating: electroplating and electroless nickel (EN). Electroplating uses electrical current to drive deposition, while EN relies on a chemical reduction reaction. EN typically yields more uniform thickness over the entire workpiece, including deep holes and complex recesses.",
+      // TOC
+      toc_title: "Contents",
+      toc_features: "Features",
+      toc_benefits: "Benefits",
+      toc_makeup: "Part 1: Make-up",
+      toc_process: "Part 2: Plating steps",
+      toc_conditions: "Operating conditions & equipment",
+      // Features
+      features_h: "Key features",
+      features_lead: "A concise summary for plating lines: surface quality, stability, and readiness for subsequent processes.",
+      feat_1_t: "High gloss across current range",
+      feat_1_d: "From <strong>LCD to HCD</strong>, produces a uniform bright finish.",
+      feat_2_t: "Deep-recess coverage",
+      feat_2_d: "Excellent throwing power into holes/slots; uniform in recesses.",
+      feat_3_t: "Corrosion-protection base",
+      feat_3_d: "Nickel layer protects against rust and moisture.",
+      feat_4_t: "Wide operating window",
+      feat_4_d: "Tolerant to variation in temperature, concentration, and current.",
+      feat_5_t: "Leveling & smoothing",
+      feat_5_d: "Masks grit lines and reduces roughness for a smoother finish.",
+      feat_6_t: "Chromium-ready",
+      feat_6_d: "Surface is ready for a decorative chrome topcoat.",
+
         /* Benefits */
-        benefits_h:"Properties & benefits of nickel plating",
-        benefit_1:"<strong>Corrosion protection:</strong> resists humidity/chemicals/salt spray to extend service life.",
-        benefit_2:"<strong>Hardness & wear resistance:</strong> reduces scratching; suitable for mechanical parts.",
-        benefit_3:"<strong>Aesthetics:</strong> bright, smooth finish for decorative/automotive/jewelry.",
-        benefit_4:"<strong>Undercoat:</strong> ideal base before chrome for adhesion and corrosion resistance.",
+      benefits_h:"Properties and Benefits of Nickel Plating",
+      benefit_1: "<strong>Corrosion protection:</strong> Nickel plating is one of the most effective ways to create a protective barrier on metal parts, especially in environments with persistent humidity or continuous chemical exposure. The deposited nickel layer acts as a dense, robust barrier that does not readily react with the surrounding environment, helping the workpiece resist rust and corrosion for a long service life and with high effectiveness. Thanks to this property, nickel plating is widely adopted in industries where parts face harsh weather or corrosive agents, such as marine, chemical processing, and automotive components.",
+      benefit_2: "<strong>Increased hardness & wear resistance:</strong> A nickel layer plated onto the substrate significantly increases hardness and resistance to wear, allowing parts to better resist scratches and day-to-day damage. This is especially important for <em>mechanical components</em> that endure continuous friction or abrasion—such as gears, bearings, and tools—so nickel plating helps extend equipment life and reduce maintenance needs.",
+      benefit_3: "<strong>Aesthetics:</strong> Nickel provides a <em>bright, smooth</em>, visually refined finish that elevates product value. The coating gives parts a distinctive, high-quality appearance, making it popular for applications that demand both beauty and performance—e.g., exterior automotive trim, jewelry, household hardware, and decorative fittings. Nickel finishes are also easy to clean and maintain their luster, keeping products looking new for longer.",
+      benefit_4: "<strong>Undercoat:</strong> Beyond serving as a final finish, nickel is also used as a critical <em>undercoat</em> prior to other platings—most notably <em>chromium</em>. A nickel underlayer greatly improves the adhesion of the chromium topcoat and acts as a first corrosion-resistant barrier, further enhancing the overall durability of the part. The result is a product that is strong, long-lasting, and visually premium.",
 
         /* Make-up table */
         makeup_h:"Part 1: Make-up (bath preparation)",
