--- a/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
@@ -419,11 +419,11 @@
         <h2 id="mon-h" class="section" data-i18n-key="mon_h">การตรวจสอบสภาพการดำเนินงาน & การกรอง</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="mon_ph">pH เหมาะสม ~5.2 ตรวจและแก้ไขทุกวัน</li>
-            <li data-i18n-key="mon_temp">อุณหภูมิ 20–45 °C</li>
-            <li data-i18n-key="mon_cd">ความหนาแน่นกระแส (ถังกลิ้ง) แนะนำ ~0.2–1.5 A/dm²</li>
-            <li data-i18n-key="mon_tank">บ่อชุบที่เหมาะสม: ถังทนกรด เช่น PP/PE</li>
-            <li data-i18n-key="mon_filter">การกรองจำเป็นทั้งบ่อกลิ้งและบ่อแขวน เพื่อกำจัดการปนเปื้อนของเหล็ก</li>
+            <li data-i18n-key="mon_ph">pH เหมาะสม ~5.2 ตรวจและแก้ไขทุกวัน</li><br>
+            <li data-i18n-key="mon_temp">อุณหภูมิ 20–45 °C</li><br>
+            <li data-i18n-key="mon_cd">ความหนาแน่นกระแส (ถังกลิ้ง) แนะนำ ~0.2–1.5 A/dm²</li><br>
+            <li data-i18n-key="mon_tank">บ่อชุบที่เหมาะสม: ถังทนกรด เช่น PP/PE</li><br>
+            <li data-i18n-key="mon_filter">การกรองจำเป็นทั้งบ่อกลิ้งและบ่อแขวน เพื่อกำจัดการปนเปื้อนของเหล็ก</li><br>
           </ul>
         </div>
       </section>
@@ -432,14 +432,14 @@
         <h2 id="tr-h" class="section" data-i18n-key="tr_h">วิธีการแก้ไขน้ำยาชุบซิงค์กรดเบื้องต้น</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="tr_burn"><strong>ผิวไหม้บริเวณกระแสสูง:</strong> กระแสสูงเกิน / ยาพื้นน้อย / Zn ต่ำ / กวนไม่สม่ำเสมอ / คลอไรด์สูงเกิน / น้ำยาต่ำอุณหภูมิ / pH ต่ำ</li>
-            <li data-i18n-key="tr_haze"><strong>ผิวมัวบริเวณกระแสกลาง–ต่ำ:</strong> ยาเงาน้อย / อุณหภูมิสูงเกิน / คลอไรด์ต่ำหรือสูงเกิน / ปนเปื้อนโลหะหนัก/อินทรีย์</li>
-            <li data-i18n-key="tr_pit"><strong>ผิวเป็นตามด (กลาง–สูง):</strong> ยาเงามากเกิน / คลอไรด์สูงเกิน / ปนเปื้อนเหล็กหรือสารอื่น</li>
-            <li data-i18n-key="tr_spot"><strong>ผิวเป็นดวง/ชุบไม่ติดเป็นที่ ๆ :</strong> ปนเปื้อนโครเมียม / ยาเงามากเกิน / ปนเปื้อนสารอินทรีย์</li>
-            <li data-i18n-key="tr_slow"><strong>ชุบช้ากว่าปกติ:</strong> คลอไรด์ต่ำ / พื้นที่แอโนดไม่พอ / กระแสต่ำ / pH ต่ำ</li>
-            <li data-i18n-key="tr_white"><strong>เกิดคราบขาวก่อนจุ่มสี:</strong> ล้างไม่เพียงพอ / ทิ้งชิ้นงานนานก่อนล้าง / น้ำยาโครเมตเสื่อม</li>
-            <li data-i18n-key="tr_rough"><strong>ผิวขรุขระไม่เรียบ:</strong> แผ่นซิงค์มากเกิน / ถุงผ้าขาด / เป่าลมมากไป / ใช้ยาเงาเปลือง / บ่อร้อนเกิน</li>
-            <li data-i18n-key="tr_fog"><strong>ผิวเกิดฝ้าขาว:</strong> สัดส่วนยาเงา:ยาพื้นไม่สมดุล / น้ำยาปนเปื้อน</li>
+            <li data-i18n-key="tr_burn"><strong>ผิวไหม้บริเวณกระแสสูง:</strong> กระแสสูงเกิน / ยาพื้นน้อย / Zn ต่ำ / กวนไม่สม่ำเสมอ / คลอไรด์สูงเกิน / น้ำยาต่ำอุณหภูมิ / pH ต่ำ</li><br>
+            <li data-i18n-key="tr_haze"><strong>ผิวมัวบริเวณกระแสกลาง–ต่ำ:</strong> ยาเงาน้อย / อุณหภูมิสูงเกิน / คลอไรด์ต่ำหรือสูงเกิน / ปนเปื้อนโลหะหนัก/อินทรีย์</li><br>
+            <li data-i18n-key="tr_pit"><strong>ผิวเป็นตามด (กลาง–สูง):</strong> ยาเงามากเกิน / คลอไรด์สูงเกิน / ปนเปื้อนเหล็กหรือสารอื่น</li><br>
+            <li data-i18n-key="tr_spot"><strong>ผิวเป็นดวง/ชุบไม่ติดเป็นที่ ๆ :</strong> ปนเปื้อนโครเมียม / ยาเงามากเกิน / ปนเปื้อนสารอินทรีย์</li><br>
+            <li data-i18n-key="tr_slow"><strong>ชุบช้ากว่าปกติ:</strong> คลอไรด์ต่ำ / พื้นที่แอโนดไม่พอ / กระแสต่ำ / pH ต่ำ</li><br>
+            <li data-i18n-key="tr_white"><strong>เกิดคราบขาวก่อนจุ่มสี:</strong> ล้างไม่เพียงพอ / ทิ้งชิ้นงานนานก่อนล้าง / น้ำยาโครเมตเสื่อม</li><br>
+            <li data-i18n-key="tr_rough"><strong>ผิวขรุขระไม่เรียบ:</strong> แผ่นซิงค์มากเกิน / ถุงผ้าขาด / เป่าลมมากไป / ใช้ยาเงาเปลือง / บ่อร้อนเกิน</li><br>
+            <li data-i18n-key="tr_fog"><strong>ผิวเกิดฝ้าขาว:</strong> สัดส่วนยาเงา:ยาพื้นไม่สมดุล / น้ำยาปนเปื้อน</li><br>
           </ul>
         </div>
       </section>
@@ -531,14 +531,14 @@
         intro_h:"ภาพรวม & ประเภทสารละลาย",
         intro_p1:"ซิงค์กรดแอมโมเนีย และ ซิงค์กรดโพแทสเซียม เป็นประเภทของ Acid Zinc ที่ต่างกันที่ตัวนำไฟฟ้าในสารละลาย (chloride salt). ระบบแอมโมเนียใช้แอมโมเนียมคลอไรด์ (NH4Cl) ส่วนระบบโพแทสเซียมใช้โพแทสเซียมคลอไรด์ (KCl).",
         intro_am_h:"ซิงค์กรดแอมโมเนีย (Ammonium Chloride)",
-        intro_am_b1:"ชุบได้ที่ความหนาแน่นกระแสสูง (HCD) ได้ดี",
-        intro_am_b2:"Throwing Power โดยรวมดีกว่าแบบโพแทสเซียม",
-        intro_am_b3:"ข้อควรระวังด้านสิ่งแวดล้อม: แอมโมเนียระเหยง่าย มีกลิ่น และกระทบการบำบัดน้ำเสีย",
+        intro_am_b1:"สารละลายชนิดนี้มีความสามารถในการเคลือบผิวชิ้นงานได้ดี แม้จะใช้กระแสไฟฟ้าในระดับที่สูง ซึ่งทำให้กระบวนการชุบสามารถทำได้อย่างรวดเร็ว เหมาะสำหรับชิ้นงานที่ต้องการการชุบหนาหรือการผลิตจำนวนมาก",
+        intro_am_b2:"ความสามารถของน้ำยาในการเคลือบผิวชิ้นงานได้อย่างสม่ำเสมอในทุกๆ ส่วน โดยเฉพาะบริเวณที่มีซอกมุมหรือร่องลึกที่กระแสไฟฟ้าเข้าถึงได้ยาก ซึ่งสารละลายชนิดนี้มีประสิทธิภาพในด้านนี้ดีกว่าสารละลายที่ใช้โพแทสเซียมเป็นองค์ประกอบหลัก",
+        intro_am_b3:"สารละลายที่มีส่วนผสมของแอมโมเนียมีข้อเสียคือ แอมโมเนีย เป็นสารที่ระเหยง่าย ทำให้มีกลิ่นฉุนและส่งผลกระทบต่อสิ่งแวดล้อมโดยเฉพาะในขั้นตอนการบำบัดน้ำเสีย ซึ่งอาจต้องใช้กระบวนการที่ซับซ้อนขึ้นเพื่อกำจัดแอมโมเนียออกจากน้ำ",
         intro_k_h:"ซิงค์กรดโพแทสเซียม (Potassium Chloride)",
-        intro_k_b1:"เป็นมิตรต่อสิ่งแวดล้อมกว่า: ไม่มีแอมโมเนีย ลดกลิ่นฉุน",
-        intro_k_b2:"บำบัดน้ำเสียง่าย ลดภาระระบบ",
-        intro_k_b3:"คุณภาพผิวเงา/ทนทานดี เหมาะการใช้งานสมัยใหม่",
-        intro_k_b4:"การกระจายอาจด้อยกว่าแบบแอมโมเนียบางกรณี แต่แลกด้วยความปลอดภัย",
+        intro_k_b1:"สารละลายชนิดนี้ถูกพัฒนาขึ้นมาเพื่อแก้ไขปัญหาของแอมโมเนีย ทำให้ ไม่มีส่วนผสมของแอมโมเนีย จึงส่งผลให้มีกลิ่นฉุนน้อยลงมาก และมีความเป็นมิตรต่อสิ่งแวดล้อมมากกว่า",
+        intro_k_b2:"เนื่องจากไม่มีแอมโมเนียที่เป็นสารปนเปื้อนที่กำจัดยาก ทำให้กระบวนการ บำบัดน้ำเสีย ง่ายขึ้นและใช้เวลาน้อยลง ซึ่งช่วยลดภาระการทำงานของระบบบำบัดน้ำเสียและลดต้นทุนโดยรวม",
+        intro_k_b3:"การชุบด้วยสารละลายชนิดนี้ให้ผิวเคลือบที่มี ความเงางามและทนทาน สูง ซึ่งเป็นคุณสมบัติที่สำคัญและตอบโจทย์ความต้องการของอุตสาหกรรมการผลิตสมัยใหม่ที่เน้นคุณภาพและความสวยงามของผลิตภัณฑ์",
+        intro_k_b4:"ความสามารถในการกระจายตัวของสารละลายชนิดนี้อาจด้อยกว่าแบบที่มีแอมโมเนียเล็กน้อย แต่ข้อดีที่สำคัญคือความ ปลอดภัย ที่เพิ่มขึ้น เนื่องจากไม่มีการใช้แอมโมเนียที่เป็นสารอันตราย ทำให้กระบวนการทำงานปลอดภัยและเป็นมิตรต่อสิ่งแวดล้อมมากกว่า",
 
         features_h:"จุดเด่นของน้ำยา",
         features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
@@ -571,9 +571,26 @@
         add_h:"การปรับเติมน้ำยาพื้น–ยาเงา", add_lead:"ทุก ๆ 1,000 Ah ให้เติมโดยประมาณ (อ้างอิงจาก Hull‑cell และผลผลิตจริง)",
         add_th_item:"รายการ", add_th_rate:"อัตราแนะนำ", add_m:"ยาพื้นซิงค์กรดแอมโมเนีย", add_r:"ยาเงาซิงค์กรดแอมโมเนีย", add_note:"การทำงานของส่วนประกอบ: รักษาระดับตามแนะนำ วิเคราะห์ Zn รายสัปดาห์ เติมตามผลวิเคราะห์ คลอไรด์ตรวจ/เติมทุกวัน ส่วนยาเงาและยาพื้นลดลงตามการผลิต ให้ปรับตามผล Hull‑cell",
 
-        mon_h:"การตรวจสอบสภาพการดำเนินงาน & การกรอง", mon_ph:"pH เหมาะสม ~5.2 ตรวจและแก้ไขทุกวัน", mon_temp:"อุณหภูมิ 20–45 °C", mon_cd:"ความหนาแน่นกระแส (ถังกลิ้ง) แนะนำ ~0.2–1.5 A/dm²", mon_tank:"บ่อชุบที่เหมาะสม: ถังทนกรด เช่น PP/PE", mon_filter:"การกรองจำเป็นทั้งบ่อกลิ้งและบ่อแขวน เพื่อกำจัดการปนเปื้อนของเหล็ก",
+        mon_h:"การตรวจสอบสภาพการดำเนินงาน & การกรอง", 
+        mon_ph: "ค่า pH ที่เหมาะสมสำหรับน้ำยาชุบซิงค์กรดอยู่ที่ประมาณ 5.2 การควบคุมค่า pH ให้คงที่อยู่เสมอเป็นสิ่งสำคัญอย่างยิ่ง เพราะหากค่า pH ต่ำเกินไป (เป็นกรดมาก) จะทำให้ประสิทธิภาพการชุบลดลง และหากค่า pH สูงเกินไป (เป็นด่าง) อาจทำให้เกิดการตกตะกอนของสารเคมีได้ ดังนั้น จึงควร ตรวจสอบและแก้ไขค่า pH ทุกวัน เพื่อรักษาคุณภาพของน้ำยาให้อยู่ในสภาวะที่เหมาะสมอยู่เสมอ",
+      mon_temp: "อุณหภูมิที่เหมาะสมสำหรับน้ำยาชุบซิงค์กรดคือ 20-45°C อุณหภูมิมีผลโดยตรงต่อคุณภาพของการชุบ หากอุณหภูมิต่ำเกินไปจะทำให้การชุบเป็นไปอย่างช้าๆ และอาจเกิดปัญหาผิวหยาบ ในทางกลับกัน หากอุณหภูมิสูงเกินไปจะทำให้สารเคมีบางตัวสลายตัว และอาจทำให้ผิวเคลือบเป็นฝ้ามัวหรือไหม้ได้",
+      mon_cd: "ในกระบวนการชุบแบบ ถังกลิ้ง (Barrel Plating) ซึ่งใช้สำหรับชิ้นงานขนาดเล็ก ควรใช้ค่าความหนาแน่นกระแสไฟฟ้าที่แนะนำคือ 0.2-1.5 A/dm² (แอมแปร์ต่อตารางเดซิเมตร) การควบคุมค่ากระแสนี้ให้เหมาะสมจะช่วยให้การชุบเป็นไปอย่างสม่ำเสมอทั่วทั้งชิ้นงาน และป้องกันปัญหาผิวไหม้หรือการชุบไม่ติดในบางจุด",
+      mon_tank: "บ่อชุบที่ใช้จะต้องมีความทนทานต่อกรด PP (Polypropylene) และ PE (Polyethylene) เป็นวัสดุที่นิยมใช้และเหมาะสมอย่างยิ่งสำหรับงานประเภทนี้ เนื่องจากมีคุณสมบัติทนทานต่อสารเคมีสูง ไม่ทำปฏิกิริยากับน้ำยาชุบและไม่ทำให้เกิดการปนเปื้อน",
+      mon_filter: "การกรอง เป็นขั้นตอนที่จำเป็นอย่างยิ่งสำหรับทั้งบ่อชุบแบบกลิ้งและแบบแขวน เพื่อ กำจัดการปนเปื้อนของเหล็ก และอนุภาคอื่นๆ ที่อาจเกิดขึ้นระหว่างการใช้งาน อนุภาคเหล่านี้สามารถทำให้เกิดปัญหาผิวขรุขระ หรือผิวเป็นตามด (Pitting) ได้ การกรองอย่างสม่ำเสมอจะช่วยรักษาความสะอาดของน้ำยาและยืดอายุการใช้งานให้มีคุณภาพอยู่เสมอ",
 
-        tr_h:"วิธีการแก้ไขน้ำยาชุบซิงค์กรดเบื้องต้น", tr_burn:"ผิวไหม้บริเวณกระแสสูง: กระแสสูงเกิน / ยาพื้นน้อย / Zn ต่ำ / กวนไม่สม่ำเสมอ / คลอไรด์สูงเกิน / น้ำยาต่ำอุณหภูมิ / pH ต่ำ", tr_haze:"ผิวมัวบริเวณกระแสกลาง–ต่ำ: ยาเงาน้อย / อุณหภูมิสูงเกิน / คลอไรด์ต่ำหรือสูงเกิน / ปนเปื้อนโลหะหนัก/อินทรีย์", tr_pit:"ผิวเป็นตามด (กลาง–สูง): ยาเงามากเกิน / คลอไรด์สูงเกิน / ปนเปื้อนเหล็กหรือสารอื่น", tr_spot:"ผิวเป็นดวง/ชุบไม่ติดเป็นที่ ๆ : ปนเปื้อนโครเมียม / ยาเงามากเกิน / ปนเปื้อนสารอินทรีย์", tr_slow:"ชุบช้ากว่าปกติ: คลอไรด์ต่ำ / พื้นที่แอโนดไม่พอ / กระแสต่ำ / pH ต่ำ", tr_white:"เกิดคราบขาวก่อนจุ่มสี: ล้างไม่เพียงพอ / ทิ้งชิ้นงานนานก่อนล้าง / น้ำยาโครเมตเสื่อม", tr_rough:"ผิวขรุขระไม่เรียบ: แผ่นซิงค์มากเกิน / ถุงผ้าขาด / เป่าลมมากไป / ใช้ยาเงาเปลือง / บ่อร้อนเกิน", tr_fog:"ผิวเกิดฝ้าขาว: สัดส่วนยาเงา:ยาพื้นไม่สมดุล / น้ำยาปนเปื้อน",
+        tr_h: "วิธีการแก้ไขน้ำยาชุบซิงค์กรดเบื้องต้น",
+
+      tr_burn: "<strong>ผิวไหม้บริเวณกระแสสูง (High Current Density Burning)</strong>: ปัญหานี้มักเกิดขึ้นบริเวณมุมหรือขอบของชิ้นงานที่มีกระแสไฟฟ้าไหลผ่านมากเกินไป ทำให้เกิดการสะสมของสังกะสีอย่างรวดเร็วและไม่สม่ำเสมอ สาเหตุหลักคือ กระแสไฟฟ้าสูงเกินไป, ปริมาณ Zinc หรือ ยาพื้น (Main Additive) ในน้ำยาไม่เพียงพอ, สารละลายในบ่อชุบ กวนไม่สม่ำเสมอ, ปริมาณ คลอไรด์สูงเกินไป, อุณหภูมิหรือ pH ของน้ำยาต่ำเกินไป",
+
+      tr_haze: "<strong>ผิวมัวบริเวณกระแสกลาง-ต่ำ (Low-Mid Current Density Haze)</strong>: ผิวมัวหรือด้าน มักเกิดในพื้นที่ผิวเรียบที่กระแสไฟฟ้าไหลผ่านไม่มากนัก สาเหตุคือ ยาเงา (Brightener) มีปริมาณน้อยเกินไป, อุณหภูมิของน้ำยาสูงเกินไป, ปริมาณคลอไรด์ไม่เหมาะสม หรือมีการ ปนเปื้อนโลหะหนัก และสารอินทรีย์ต่างๆ ในน้ำยา",
+
+      tr_pit: "<strong>ผิวเป็นตามด (Pitting)</strong>: รูพรุนเล็กๆ บนผิวเคลือบมักเกิดขึ้นในบริเวณที่มีกระแสไฟฟ้าสูง-กลาง สาเหตุหลักเกิดจาก ยาเงามากเกินไป, คลอไรด์สูงเกินไป หรือมีการ ปนเปื้อนเหล็ก หรือสารอื่นๆ ซึ่งเป็นสาเหตุให้เกิดฟองก๊าซที่เกาะติดผิวชิ้นงานระหว่างการชุบ",
+
+      tr_spot: "<strong>ผิวเป็นดวง/ชุบไม่ติดเป็นที่ๆ (Spotting/Bare Spots)</strong>: ปัญหานี้บ่งชี้ถึงความไม่สมบูรณ์ของผิวเคลือบ สาเหตุเกิดจากการ ปนเปื้อนโครเมียม, มี ยาเงามากเกินไป หรือการ ปนเปื้อนสารอินทรีย์ ที่ทำให้เกิดฟิล์มบางๆ บนผิวชิ้นงานและขัดขวางการเกาะตัวของสังกะสี",
+
+      tr_rough: "<strong>ผิวขรุขระไม่เรียบ (Rough Deposit)</strong>: ผิวเคลือบที่มีลักษณะเป็นเม็ดทรายหรือหยาบกระด้าง สาเหตุมาจาก แผ่นซิงค์ในบ่อชุบมีมากเกินไป หรือ ถุงผ้าที่ใส่แผ่นซิงค์ขาด, การ เป่าลมมากเกินไป ทำให้ตะกอนในบ่อฟุ้งกระจาย, การใช้ ยาเงาเปลือง, หรืออุณหภูมิของบ่อชุบ ร้อนเกินไป",
+
+      tr_white: "<strong>ผิวเกิดฝ้าขาว (Whitish Film)</strong>: มักเกิดจาก สัดส่วนของยาเงาและยาพื้นไม่สมดุล ทำให้การชุบไม่เป็นไปตามปกติ หรืออาจเกิดจาก น้ำยาปนเปื้อน",
 
         fe_h:"การจัดการเหล็กในน้ำยาชุบ", fe_remove_h:"การกรองเอาเหล็กออก", fe_remove_p:"เมื่อเหล็กสะสมเกิน ~1,000 ppm อาจเกิดคราบสกปรกบนผิว ควรตกตะกอนด้วยโพแทสเซียมเปอร์แมงกาเนต", fe_remove_step:"วิธีใช้: ละลาย KMnO4 120–150 กรัม ต่อบ่อ 1,000 ลิตร กวน ทิ้งไว้ค้างคืน แล้วกรองเอาตะกอนออก", fe_test_h:"การตรวจเช็คปริมาณเหล็ก (อย่างง่าย)", fe_test_p:"ตักน้ำยา ~100–200 ซีซี ใส่ไฮโดรเจนเปอร์ออกไซด์ 3–4 หยด หรือโรย KMnO4 4–5 เกล็ด กวนและสังเกตตะกอน ถ้ามากให้ทำการตกตะกอนและกรองตามวิธีข้างต้น", fe_note:"หมายเหตุ: KMnO4 อาจดูดซับยาพื้น/ยาเงา ทำให้ระดับลดลงหลังการกรอง",
 
@@ -636,9 +653,25 @@
         add_h:"Carrier/Brightener additions", add_lead:"Approximate additions per 1,000 Ah (verify with Hull‑cell & production)",
         add_th_item:"Item", add_th_rate:"Suggested rate", add_m:"Ammonium acid zinc carrier", add_r:"Ammonium acid zinc brightener", add_note:"Maintain components within target; check Zn weekly and adjust; check chloride daily; carrier/brightener consumption tracks production — tune via Hull‑cell.",
 
-        mon_h:"Monitoring & Filtration", mon_ph:"Keep pH ≈5.2; check/adjust daily", mon_temp:"Temperature 20–45 °C", mon_cd:"Barrel CD guideline ~0.2–1.5 A/dm²", mon_tank:"Tank: acid‑resistant (PP/PE)", mon_filter:"Filtration is essential for both barrel and rack to remove iron contamination",
+        mon_h:"Monitoring & Filtration",
+        mon_ph: "The optimal pH for an acid zinc bath is around 5.2. Keeping pH constant is critical: if pH is too low (more acidic), deposition efficiency drops; if pH is too high (alkaline), chemical precipitation may occur. Therefore, check and correct the bath pH daily to keep it within the proper operating window.",
+      mon_temp: "A suitable temperature range for acid zinc is 20–45°C. Temperature directly affects deposit quality: too low slows deposition and can cause roughness, while too high can decompose certain additives and lead to haze or burning on the deposit.",
+      mon_cd: "For barrel plating of small parts, a recommended current density is 0.2–1.5 A/dm². Proper control ensures uniform coverage across the load and helps prevent high-current burning or localized bare areas.",
+      mon_tank: "Use acid-resistant tanks. PP (polypropylene) and PE (polyethylene) are widely used because they resist chemicals, do not react with the bath, and minimize contamination.",
+      mon_filter: "Filtration is essential for both barrel and rack baths to remove iron contamination and other particulates generated during operation. Such particles can cause roughness or pitting; consistent filtration keeps the bath clean and extends service life.",
 
-        tr_h:"Troubleshooting — acid zinc", tr_burn:"Burning (HCD): excessive current / low carrier / low Zn / poor agitation / high chloride / low bath temp / low pH", tr_haze:"Haze at mid‑/LCD: low brightener / too hot / chloride too low or high / heavy‑metal/organic contamination", tr_pit:"Pitting at mid‑/HCD: over‑bright / high chloride / Fe or other contamination", tr_spot:"Spots/non‑deposit: chromium contamination / over‑bright / organics", tr_slow:"Slow plating: low chloride / insufficient anode area / low current / low pH", tr_white:"White film before chromate: poor rinsing / long delay before rinse / aged chromate", tr_rough:"Roughness: excess zinc anodes / torn anode bags / excessive air / over‑bright / overheated bath", tr_fog:"White haze: carrier:brightener imbalance / contaminated bath",
+        tr_h:"Troubleshooting — acid zinc",
+        tr_burn: "<strong>High Current Density Burning</strong>: This typically appears on corners or edges where excessive current crowds the surface, leading to rapid and uneven zinc build-up. Principal causes include: current too high, insufficient zinc or main additive in the bath, inadequate agitation, chloride level too high, or bath temperature/pH being too low.",
+
+      tr_haze: "<strong>Low–Mid Current Density Haze</strong>: Dull or matte appearance often found on relatively flat, lower-current areas. Causes: brightener dosage too low, bath temperature too high, improper chloride level, or contamination by heavy metals and organics in the bath.",
+
+      tr_pit: "<strong>Pitting</strong>: Small pinholes commonly occurring in medium-to-high current regions. Main causes: excessive brightener, excessive chloride, or contamination by iron/other species that promote gas bubbles adhering to the surface during deposition.",
+
+      tr_spot: "<strong>Spotting / Bare Spots</strong>: Indicates incomplete or non-uniform coverage. Root causes: chromium contamination, overdosed brightener, or organic contamination forming a thin film that inhibits zinc adhesion.",
+
+      tr_rough: "<strong>Rough Deposit</strong>: Sandy or coarse texture. Typical causes: too many zinc pieces in the bath or torn anode bags, excessive air agitation dispersing sludge, overconsumption of brightener, or an overly hot bath.",
+
+      tr_white: "<strong>Whitish Film</strong>: Often due to an imbalanced brightener-to-carrier ratio leading to abnormal deposition, or general bath contamination.",
 
         fe_h:"Iron control", fe_remove_h:"Removing iron by precipitation", fe_remove_p:"If Fe > ~1,000 ppm, deposits may soil; precipitate with KMnO4.", fe_remove_step:"How: dissolve 120–150 g KMnO4 per 1,000 L bath, mix, hold overnight, then filter sludge.", fe_test_h:"Quick Fe check",
         fe_test_p:"Take ~100–200 mL, add 3–4 drops H2O2 or sprinkle 4–5 flakes KMnO4; stir and observe. Heavy sludge → do precipitation & filtration.", fe_note:"Note: KMnO4 may adsorb carrier/brightener; expect lower levels after filtration.",
