--- a/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
@@ -337,12 +337,12 @@
         <h2 id="makeup-h" class="section" data-i18n-key="makeup_h">การเตรียมบ่อ (Make-up)</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="makeup_s1">ทำความสะอาดถัง เติมน้ำ ~ครึ่งถัง</li>
-            <li data-i18n-key="makeup_s2">แช่ล้าง NaOH 2% ≥ 12 ชม. แล้วล้างน้ำ</li>
-            <li data-i18n-key="makeup_s3">ค่อย ๆ เติมสารตามอัตราส่วนให้ละลายหมด ปล่อยเย็น</li>
-            <li data-i18n-key="makeup_s4">เติม Zinc Purifier (PURISOL) 4 ซีซี/ลิตร คน พักตกตะกอนข้ามคืน</li>
-            <li data-i18n-key="makeup_s5">กรองและปรับระดับน้ำ</li>
-            <li data-i18n-key="makeup_s6">เติม 111B ทีละน้อยจนถึง 1 ลิตร ต่อบ่อ 1,000 ลิตร</li>
+            <li data-i18n-key="makeup_s1">ทำความสะอาดถัง: เริ่มต้นด้วยการล้างทำความสะอาดถังชุบสังกะสีอย่างละเอียดเพื่อขจัดสิ่งสกปรก คราบไขมัน หรือสารเคมีตกค้างเก่าๆ ที่อาจส่งผลต่อคุณภาพของการชุบได้ เติมน้ำ: หลังจากทำความสะอาดแล้ว ให้เติมน้ำสะอาดลงไปในถังประมาณครึ่งหนึ่งของปริมาตรทั้งหมด การเติมน้ำในปริมาณนี้จะช่วยให้สามารถควบคุมความเข้มข้นของสารเคมีต่างๆ ในขั้นตอนต่อไปได้ง่ายขึ้น</li>
+            <li data-i18n-key="makeup_s2">แช่ล้างด้วยโซดาไฟ 2%: เตรียมสารละลายโซดาไฟ (โซเดียมไฮดรอกไซด์, NaOH) ที่มีความเข้มข้น 2% แล้วเทลงในถังระยะเวลา: ทิ้งไว้ให้โซดาไฟทำงานอย่างน้อย 12 ชั่วโมงหรือนานกว่านั้น สารละลายโซดาไฟจะช่วยทำความสะอาดและปรับสภาพผิวภายในถังการล้าง: หลังจากครบกำหนดเวลา ให้ระบายสารละลายโซดาไฟออกและล้างถังด้วยน้ำสะอาดหลายๆ ครั้งจนแน่ใจว่าไม่มีสารเคมีตกค้าง</li>
+            <li data-i18n-key="makeup_s3">เตรียมสารเคมี: ค่อยๆ เติมสารเคมีสำหรับชุบสังกะสีตามอัตราส่วนที่กำหนดลงไปในน้ำที่เตรียมไว้การละลาย: คนสารละลายอย่างสม่ำเสมอเพื่อให้สารเคมีละลายเข้ากันอย่างสมบูรณ์ การปล่อยให้เย็น: เมื่อสารเคมีละลายหมดแล้ว ให้ปล่อยสารละลายไว้จนอุณหภูมิกลับสู่ปกติก่อนดำเนินการในขั้นตอนต่อไป</li>
+            <li data-i18n-key="makeup_s4">เติม Zinc Purifier (PURISOL): เติมสาร PURISOL ในอัตราส่วน 4 ซีซีต่อน้ำ 1 ลิตร สารนี้มีคุณสมบัติเป็น Zinc Purifier ซึ่งจะช่วยจับและตกตะกอนสิ่งเจือปนที่อาจปนอยู่ในสารละลายชุบ การคนและการพัก: คนสารละลายให้เข้ากันดี จากนั้นปล่อยทิ้งไว้ข้ามคืนเพื่อให้สิ่งเจือปนต่างๆ ตกตะกอนลงสู่ก้นถัง</li>
+            <li data-i18n-key="makeup_s5">การกรอง: เมื่อสารตะกอนทั้งหมดตกลงสู่ก้นถังแล้ว ให้กรองสารละลายในถังเพื่อแยกตะกอนออก ทำให้ได้สารละลายที่ใสและบริสุทธิ์ การปรับระดับน้ำ: ปรับระดับน้ำในถังให้ได้ปริมาตรตามที่ต้องการ โดยอาจเติมน้ำสะอาดเพิ่มเข้าไปจนถึงระดับที่กำหนด เพื่อให้ความเข้มข้นของสารละลายมีความเหมาะสม</li>
+            <li data-i18n-key="makeup_s6">เติม 111B: ค่อยๆ เติมสาร 111B ลงไปในถังทีละน้อย อัตราส่วน: เติมในอัตราส่วน 1 ลิตรต่อบ่อขนาด 1,000 ลิตร สาร 111B เป็นสารเคมีสำคัญที่ช่วยเพิ่มประสิทธิภาพและควบคุมคุณภาพของการชุบสังกะสีให้ได้ผลลัพธ์ที่ดีที่สุด</li>
           </ul>
         </div>
       </section>
@@ -397,15 +397,9 @@
       <section id="safety" class="reveal section-block" aria-labelledby="safety-h">
         <h2 id="safety-h" class="section" data-i18n-key="safety_h">ความปลอดภัย</h2>
         <div class="content">
-          <p data-i18n-key="safety_p1" data-i18n-html="true">
-            สารละลายมี <strong>ไซยาไนด์</strong> และด่างเข้มข้น: หลีกเลี่ยงการสูดดม/สัมผัสผิวหนัง/ตา ติดตั้งระบบระบายอากาศที่เหมาะสม เตรียมแผนฉุกเฉิน/อุปกรณ์ล้างตา/ฝักบัวนิรภัย
-          </p>
-          <p data-i18n-key="safety_p2" data-i18n-html="true">
-            <strong>ห้าม</strong> ผสมกรดกับสารละลายที่มีไซยาไนด์โดยไม่ประเมินความเสี่ยง — อาจเกิดก๊าซพิษ จัดเก็บสารเคมีตามกฎหมายท้องถิ่นและข้อกำหนดความปลอดภัยของโรงงาน
-          </p>
-          <p data-i18n-key="safety_p3" data-i18n-html="true">
-            <strong>PPE</strong> แนะนำ: ถุงมือ แว่นตานิรภัย หน้ากาก ระหว่างการทำงาน
-          </p>
+          <p data-i18n-key="safety_p1" data-i18n-html="true">สารละลายที่มี ไซยาไนด์ และ ด่างเข้มข้น มีฤทธิ์กัดกร่อนสูงและเป็นพิษร้ายแรง การสัมผัสโดยตรงอาจทำให้เกิดการระคายเคืองอย่างรุนแรงต่อผิวหนังและดวงตา การสูดดมไอระเหยหรือละอองของสารละลายอาจส่งผลกระทบต่อระบบทางเดินหายใจและอาจถึงขั้นเสียชีวิตได้ เพื่อความปลอดภัยสูงสุด</p>
+          <p data-i18n-key="safety_p2" data-i18n-html="true">ห้ามผสมกรดกับสารละลายไซยาไนด์: นี่คือข้อห้ามที่สำคัญที่สุด เพราะเมื่อกรดทำปฏิกิริยากับไซยาไนด์จะเกิดก๊าซ ไฮโดรเจนไซยาไนด์ (HCN) ซึ่งเป็นก๊าซพิษร้ายแรงที่ไม่มีสี และมีกลิ่นคล้ายอัลมอนด์จางๆ เพียงเล็กน้อยก็สามารถทำให้เสียชีวิตได้</p>
+          <p data-i18n-key="safety_p3" data-i18n-html="true">เมื่อทำงานกับสารเคมีอันตราย ควรป้องกันตนเองด้วยอุปกรณ์ PPE เสมอ ถุงมือที่ทนสารเคมี เช่น ไนไตรล์ จะปกป้องผิวหนัง ขณะที่ แว่นตานิรภัยแบบปิดครอบ จะช่วยป้องกันดวงตาจากไอระเหยและละอองสารเคมี และ หน้ากาก ที่เหมาะสมจะช่วยป้องกันการสูดดมสารพิษ</p>
         </div>
       </section>
 
@@ -505,12 +499,12 @@
 
         /* Make-up */
         makeup_h:"การเตรียมบ่อ (Make-up)",
-        makeup_s1:"ทำความสะอาดถัง เติมน้ำ ~ครึ่งถัง",
-        makeup_s2:"แช่ล้างโซดาไฟ 2% ≥ 12 ชม. แล้วล้างน้ำ",
-        makeup_s3:"ค่อย ๆ เติมสารตามอัตราส่วนให้ละลายหมด ปล่อยเย็น",
-        makeup_s4:"เติม Zinc Purifier (PURISOL) 4 ซีซี/ลิตร คน พักตกตะกอนข้ามคืน",
-        makeup_s5:"กรองและปรับระดับน้ำ",
-        makeup_s6:"เติม 111B ทีละน้อยจนถึง 1 ลิตร ต่อบ่อ 1,000 ลิตร",
+        makeup_s1:"ทำความสะอาดถัง: เริ่มต้นด้วยการล้างทำความสะอาดถังชุบสังกะสีอย่างละเอียดเพื่อขจัดสิ่งสกปรก คราบไขมัน หรือสารเคมีตกค้างเก่าๆ ที่อาจส่งผลต่อคุณภาพของการชุบได้ เติมน้ำ: หลังจากทำความสะอาดแล้ว ให้เติมน้ำสะอาดลงไปในถังประมาณครึ่งหนึ่งของปริมาตรทั้งหมด การเติมน้ำในปริมาณนี้จะช่วยให้สามารถควบคุมความเข้มข้นของสารเคมีต่างๆ ในขั้นตอนต่อไปได้ง่ายขึ้น",
+        makeup_s2:"แช่ล้างด้วยโซดาไฟ 2%: เตรียมสารละลายโซดาไฟ (โซเดียมไฮดรอกไซด์, NaOH) ที่มีความเข้มข้น 2% แล้วเทลงในถังระยะเวลา: ทิ้งไว้ให้โซดาไฟทำงานอย่างน้อย 12 ชั่วโมงหรือนานกว่านั้น สารละลายโซดาไฟจะช่วยทำความสะอาดและปรับสภาพผิวภายในถังการล้าง: หลังจากครบกำหนดเวลา ให้ระบายสารละลายโซดาไฟออกและล้างถังด้วยน้ำสะอาดหลายๆ ครั้งจนแน่ใจว่าไม่มีสารเคมีตกค้าง",
+        makeup_s3:"เตรียมสารเคมี: ค่อยๆ เติมสารเคมีสำหรับชุบสังกะสีตามอัตราส่วนที่กำหนดลงไปในน้ำที่เตรียมไว้การละลาย: คนสารละลายอย่างสม่ำเสมอเพื่อให้สารเคมีละลายเข้ากันอย่างสมบูรณ์ การปล่อยให้เย็น: เมื่อสารเคมีละลายหมดแล้ว ให้ปล่อยสารละลายไว้จนอุณหภูมิกลับสู่ปกติก่อนดำเนินการในขั้นตอนต่อไป",
+        makeup_s4:"เติม Zinc Purifier (PURISOL): เติมสาร PURISOL ในอัตราส่วน 4 ซีซีต่อน้ำ 1 ลิตร สารนี้มีคุณสมบัติเป็น Zinc Purifier ซึ่งจะช่วยจับและตกตะกอนสิ่งเจือปนที่อาจปนอยู่ในสารละลายชุบ การคนและการพัก: คนสารละลายให้เข้ากันดี จากนั้นปล่อยทิ้งไว้ข้ามคืนเพื่อให้สิ่งเจือปนต่างๆ ตกตะกอนลงสู่ก้นถัง",
+        makeup_s5:"การกรอง: เมื่อสารตะกอนทั้งหมดตกลงสู่ก้นถังแล้ว ให้กรองสารละลายในถังเพื่อแยกตะกอนออก ทำให้ได้สารละลายที่ใสและบริสุทธิ์ การปรับระดับน้ำ: ปรับระดับน้ำในถังให้ได้ปริมาตรตามที่ต้องการ โดยอาจเติมน้ำสะอาดเพิ่มเข้าไปจนถึงระดับที่กำหนด เพื่อให้ความเข้มข้นของสารละลายมีความเหมาะสม",
+        makeup_s6:"เติม 111B: ค่อยๆ เติมสาร 111B ลงไปในถังทีละน้อย อัตราส่วน: เติมในอัตราส่วน 1 ลิตรต่อบ่อขนาด 1,000 ลิตร สาร 111B เป็นสารเคมีสำคัญที่ช่วยเพิ่มประสิทธิภาพและควบคุมคุณภาพของการชุบสังกะสีให้ได้ผลลัพธ์ที่ดีที่สุด",
 
         /* Maintenance */
         maint_h:"การบำรุงรักษา & การเติม",
@@ -536,9 +530,9 @@
 
         /* Safety (HTML allowed) */
         safety_h:"ความปลอดภัย",
-        safety_p1:"สารละลายมี <strong>ไซยาไนด์</strong> และด่างเข้มข้น: หลีกเลี่ยงการสูดดม/สัมผัสผิวหนัง/ตา ติดตั้งระบบระบายอากาศที่เหมาะสม เตรียมแผนฉุกเฉิน/อุปกรณ์ล้างตา/ฝักบัวนิรภัย",
-        safety_p2:"<strong>ห้าม</strong> ผสมกรดกับสารละลายที่มีไซยาไนด์โดยไม่ประเมินความเสี่ยง — อาจเกิดก๊าซพิษ จัดเก็บสารเคมีตามกฎหมายท้องถิ่นและข้อกำหนดความปลอดภัยของโรงงาน",
-        safety_p3:"<strong>PPE</strong> แนะนำ: ถุงมือ แว่นตานิรภัย หน้ากาก ระหว่างการทำงาน",
+        safety_p1:"สารละลายที่มี ไซยาไนด์ และ ด่างเข้มข้น มีฤทธิ์กัดกร่อนสูงและเป็นพิษร้ายแรง การสัมผัสโดยตรงอาจทำให้เกิดการระคายเคืองอย่างรุนแรงต่อผิวหนังและดวงตา การสูดดมไอระเหยหรือละอองของสารละลายอาจส่งผลกระทบต่อระบบทางเดินหายใจและอาจถึงขั้นเสียชีวิตได้ เพื่อความปลอดภัยสูงสุด",
+        safety_p2:"ห้ามผสมกรดกับสารละลายไซยาไนด์: นี่คือข้อห้ามที่สำคัญที่สุด เพราะเมื่อกรดทำปฏิกิริยากับไซยาไนด์จะเกิดก๊าซ ไฮโดรเจนไซยาไนด์ (HCN) ซึ่งเป็นก๊าซพิษร้ายแรงที่ไม่มีสี และมีกลิ่นคล้ายอัลมอนด์จางๆ เพียงเล็กน้อยก็สามารถทำให้เสียชีวิตได้",
+        safety_p3:"เมื่อทำงานกับสารเคมีอันตราย ควรป้องกันตนเองด้วยอุปกรณ์ PPE เสมอ ถุงมือที่ทนสารเคมี เช่น ไนไตรล์ จะปกป้องผิวหนัง ขณะที่ แว่นตานิรภัยแบบปิดครอบ จะช่วยป้องกันดวงตาจากไอระเหยและละอองสารเคมี และ หน้ากาก ที่เหมาะสมจะช่วยป้องกันการสูดดมสารพิษ",
 
         /* Footer */
         brand_name:"Baume Chemical",
