--- a/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
@@ -387,22 +387,22 @@
           <ul>
             <li data-i18n-key="tr_slow">
               <strong>ชุบติดช้า:</strong> ซิงค์ต่ำหรือยาพื้นมากไป → ปรับซิงค์ 8–22 g/L; คุมอุณหภูมิ 30–32 °C; ลดความหนาแน่นชิ้นงาน; ตรวจแอโนด/ตู้ไฟ; ตรวจการปนเปื้อนไซยาไนด์
-            </li>
+            </li><br>
             <li data-i18n-key="tr_burn">
               <strong>ไหม้บริเวณกระแสสูง:</strong> กระแสเกิน/กวนไม่สม่ำเสมอ/คลอไรด์สูงเกิน/อุณหภูมิต่ำ/pH ต่ำ → ปรับพารามิเตอร์ให้อยู่ช่วง
-            </li>
+            </li><br>
             <li data-i18n-key="tr_haze">
               <strong>ผิวมัว LCD–กลาง:</strong> ยาเงาน้อย/อุณหภูมิสูงเกิน/คลอไรด์ต่ำหรือสูงเกิน/ปนเปื้อนโลหะหนักหรืออินทรีย์
-            </li>
+            </li><br>
             <li data-i18n-key="tr_pit">
               <strong>เป็นหลุม/ตามด:</strong> ยาเงามากเกิน/คลอไรด์สูง/ปนเปื้อนเหล็กหรือสารอื่น
-            </li>
+            </li><br>
             <li data-i18n-key="tr_spot">
               <strong>เป็นดวง/ชุบไม่ติดเป็นที่ ๆ :</strong> ปนเปื้อนโครเมียม/ยาเงามากไป/ปนเปื้อนอินทรีย์
-            </li>
+            </li><br>
             <li data-i18n-key="tr_white">
               <strong>เกิดคราบขาวก่อนจุ่มสี:</strong> ล้างไม่เพียงพอ/ทิ้งชิ้นงานนานก่อนล้าง/น้ำยาโครเมตเสื่อม
-            </li>
+            </li><br>
             <li data-i18n-key="tr_rough">
               <strong>ผิวขรุขระ:</strong> แผ่นซิงค์มากเกิน/ถุงผ้าขาด/เป่าลมมากไป/ใช้ยาเงาเปลือง/บ่อร้อนเกิน
             </li>
@@ -520,13 +520,13 @@
         mnt_ppe:"* ควรสวม PPE (ถุงมือ แว่นตานิรภัย หน้ากาก) ระหว่างการทำงาน",
 
         tr_h:"แนวทางแก้ปัญหาเบื้องต้น",
-        tr_slow:"<strong>ชุบติดช้า:</strong> ซิงค์ ต่ำหรือยาพื้นมากไป → ปรับซิงค์ 8–22 g/L; คุมอุณหภูมิ 30–32 °C; ลดความหนาแน่นชิ้นงาน; ตรวจแอโนด/ตู้ไฟ; ตรวจการปนเปื้อนไซยาไนด์",
-        tr_burn:"<strong>ไหม้บริเวณกระแสสูง:</strong> กระแสเกิน/กวนไม่สม่ำเสมอ/คลอไรด์สูงเกิน/อุณหภูมิต่ำ/pH ต่ำ → ปรับพารามิเตอร์ให้อยู่ช่วง",
-        tr_haze:"<strong>ผิวมัว LCD–กลาง:</strong> ยาเงาน้อย/อุณหภูมิสูงเกิน/คลอไรด์ต่ำหรือสูงเกิน/ปนเปื้อนโลหะหนักหรืออินทรีย์",
-        tr_pit:"<strong>เป็นหลุม/ตามด:</strong> ยาเงามากเกิน/คลอไรด์สูง/ปนเปื้อนเหล็กหรือสารอื่น",
-        tr_spot:"<strong>เป็นดวง/ชุบไม่ติดเป็นที่ ๆ :</strong> ปนเปื้อนโครเมียม/ยาเงามากไป/ปนเปื้อนอินทรีย์",
-        tr_white:"<strong>เกิดคราบขาวก่อนจุ่มสี:</strong> ล้างไม่เพียงพอ/ทิ้งชิ้นงานนานก่อนล้าง/น้ำยาโครเมตเสื่อม",
-        tr_rough:"<strong>ผิวขรุขระ:</strong> แผ่นซิงค์มากเกิน/ถุงผ้าขาด/เป่าลมมากไป/ใช้ยาเงาเปลือง/บ่อร้อนเกิน",
+      tr_slow: "<strong>ชุบติดช้า:</strong> เกิดจากปริมาณ ซิงค์ ที่ต่ำหรือ ยาพื้น ที่มากเกินไป ทำให้ประสิทธิภาพการชุบลดลง สามารถแก้ไขได้โดยปรับปริมาณซิงค์ให้อยู่ในระดับที่เหมาะสม (8–22 g/L) และควบคุมอุณหภูมิของน้ำยาให้คงที่ (30–32 °C) นอกจากนี้ ควรตรวจสอบความหนาแน่นของชิ้นงานในบ่อ แอโนด และตู้ควบคุมกระแสไฟฟ้า รวมถึงการปนเปื้อนไซยาไนด์",
+      tr_burn: "<strong>ผิวไหม้บริเวณกระแสสูง:</strong> ปัญหานี้มักเกิดบริเวณที่มีกระแสไฟฟ้าสูงเกินไป สาเหตุหลักมาจาก กระแสที่สูงเกิน, การกวนน้ำยาไม่สม่ำเสมอ, คลอไรด์สูง, หรืออุณหภูมิและ pH ของน้ำยาที่ต่ำเกินไป การแก้ไขคือการปรับค่าพารามิเตอร์ต่างๆ ให้อยู่ในช่วงที่เหมาะสม",
+      tr_haze: "<strong>ผิวมัวบริเวณกระแสต่ำ-กลาง:</strong> ผิวเคลือบมีลักษณะมัวหรือด้าน สาเหตุคือ ยาเงา (brightener) มีปริมาณน้อยเกินไป อุณหภูมิสูง หรือปริมาณ คลอไรด์ ไม่เหมาะสม นอกจากนี้ การ ปนเปื้อนของโลหะหนัก และสารอินทรีย์ก็เป็นสาเหตุสำคัญ",
+      tr_pit: "<strong>ผิวเป็นหลุม/ตามด:</strong> เป็นรูพรุนเล็กๆ บนผิวเคลือบ เกิดจาก ยาเงามากเกินไป, คลอไรด์สูง หรือการ ปนเปื้อนของเหล็ก และสารอื่นๆ",
+      tr_spot: "<strong>ผิวเป็นดวง/ชุบไม่ติดเป็นที่:</strong> ผิวเคลือบไม่สม่ำเสมอเป็นหย่อมๆ สาเหตุหลักคือการ ปนเปื้อนโครเมียม, มี ยาเงามากเกินไป หรือการ ปนเปื้อนสารอินทรีย์ ที่ขัดขวางการเกาะตัวของสังกะสี",
+      tr_white: "<strong>เกิดคราบขาวก่อนจุ่มสี:</strong> คราบนี้มักเกิดขึ้นหลังการชุบและก่อนขั้นตอนทำสี (โครเมต) เนื่องจาก การล้างชิ้นงานไม่เพียงพอ, ทิ้งชิ้นงานไว้นานเกินไป หรือ น้ำยาโครเมตเสื่อมสภาพ",
+      tr_rough: "<strong>ผิวขรุขระไม่เรียบ:</strong> ผิวเคลือบมีลักษณะหยาบคล้ายเม็ดทราย สาเหตุคือ แผ่นซิงค์ในบ่อมีมากเกินไป, ถุงผ้าที่ใส่แผ่นซิงค์ขาด, การ เป่าลมมากเกินไป, การใช้ ยาเงาอย่างสิ้นเปลือง หรืออุณหภูมิของบ่อชุบที่ ร้อนเกินไป",
 
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved.",
         unit_gpl:"กรัม/ลิตร", unit_ccl:"มล./ลิตร", unit_adm2:"A/dm²"
@@ -587,13 +587,13 @@
         mnt_ppe:"* Wear PPE (gloves, safety glasses, respirator) during operations",
 
         tr_h:"Troubleshooting",
-        tr_slow:"<strong>Slow plating:</strong> low Zinc or too much carrier → set Zinc 8–22 g/L; 30–32 °C; reduce part density; check anodes/rectifier; check cyanide contamination.",
-        tr_burn:"<strong>Burning at HCD:</strong> over-current / poor agitation / high chloride / low bath temp / low pH → bring parameters back into range.",
-        tr_haze:"<strong>Haze at LCD–mid:</strong> low brightener / too hot / chloride too low or high / heavy-metal or organic contamination.",
-        tr_pit:"<strong>Pitting:</strong> over-bright / high chloride / iron or other contamination.",
-        tr_spot:"<strong>Spots / non-deposit:</strong> chromium contamination / over-bright / organics.",
-        tr_white:"<strong>White film before chromate:</strong> insufficient rinsing / long delay before rinse / aged chromate.",
-        tr_rough:"<strong>Roughness:</strong> excess zinc anodes / torn anode bags / excessive air / over-bright / overheated bath.",
+      tr_slow: "<strong>Slow deposition:</strong> Typically due to low zinc or excessive main additive, which reduces plating efficiency. Correct by adjusting Zn to 8–22 g/L and maintaining a stable bath temperature at 30–32 °C. Also check load density in the tank, anode condition, power supply, and possible cyanide contamination.",
+      tr_burn: "<strong>High-current burning:</strong> Usually appears at edges/corners where current density is excessive. Common causes include overcurrent, uneven solution agitation, high chloride, or low bath temperature/pH. Bring all parameters back into their proper operating ranges.",
+      tr_haze: "<strong>Low–mid current density haze:</strong> A dull/matte appearance often caused by insufficient brightener, elevated temperature, improper chloride level, or contamination by heavy metals/organics.",
+      tr_pit: "<strong>Pitting:</strong> Small pinholes in mid–high current regions, often from excessive brightener, high chloride, or contamination by iron/other species.",
+      tr_spot: "<strong>Spotting / bare areas:</strong> Patchy, non-uniform coverage commonly due to chromium contamination, over-brightening, or organic films that inhibit zinc deposition.",
+      tr_white: "<strong>Whitish film before chromating:</strong> Typically from inadequate rinsing after plating, excessive dwell time before chromate, or a degraded chromate bath.",
+      tr_rough: "<strong>Rough deposit:</strong> Sand-like/grainy texture caused by too many zinc slabs in the tank or torn anode bags, excessive air agitation dispersing sludge, overuse of brightener, or an overly hot bath.",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved.",
         unit_gpl:"g/L", unit_ccl:"mL/L", unit_adm2:"A/dm²"
